name:                Signs
version:             0.1.0.0
synopsis:            Interpreter for Abstract Categorial Grammar
homepage:            https://github.com/ChrisBlom/Signs
license:             MIT
license-file:        LICENSE
author:              Chris Blom
maintainer:          chrisblom@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable Signs

  HS-Source-Dirs: src

  main-is: Signs.hs

  extensions: DoAndIfThenElse
            , UnicodeSyntax
            , ScopedTypeVariables
            , FlexibleInstances
            , FlexibleContexts
            , MultiParamTypeClasses
            , FunctionalDependencies

  build-depends: base ==4.8.*
               , filepath ==1.4.*
               , directory ==1.2.*
               , containers ==0.5.*
               , pretty ==1.1.*
               , transformers ==0.4.*
               , parsec ==3.1.*
               , mtl
